--- a/MAIN FOLDER/Animals for adoption/index.html
+++ b/MAIN FOLDER/Animals for adoption/index.html
@@ -32,7 +32,7 @@
         <br><br><br><br>
 <footer>
     <h3>Navegação</h3>
-    <p><a href="../About the project/index.html">Página Inicial</a></p>
+    <p><a href="../Home/index.html">Home</a></p>
 <br><br>
     <p style="text-align: end;">© Todos os direitos reservados, Projeto Pacotinho de Amor. 2024</p>
 </footer>
